--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -1,11 +1,33 @@
+.header-image {
+  @apply overflow-hidden;
+
+  max-height: 60vh;
+}
+
+.banner {
+  @apply border-b-8 border-blue-dark pt-3 pb-4 mb-3;
+
+  & .brand {
+    @apply text-4xl border-none;
+  }
+
+  & .description {
+    @apply text-blue mb-0 font-sans;
+  }
+}
+
 .banner .nav {
-  @apply list-reset flex flex-wrap;
+  @apply list-reset flex flex-wrap justify-between;
+
+  .sub-menu {
+    @apply hidden list-reset absolute bg-white z-10 border-b-8 border-blue-dark;
+  }
 }
 
 .banner .nav a {
-  @apply inline-block px-4 py-2 border-none;
+  @apply inline-block px-2 mx-2 py-2 border-none border-transparent text-lg;
 
   &:hover {
-    color: darken(#525ddc, 30%);
+    @apply text-blue;
   }
 }
