--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -15,7 +15,7 @@
 @import "common/variables";
 
 /** Import everything from autoload */
-@import "./autoload/**/*";
+// @import "./autoload/**/*";
 
 /**
  * Import npm dependencies
