--- a/resources/assets/styles/components/_footer.scss
+++ b/resources/assets/styles/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   .social {
-    @apply list-reset flex justify-around my-4;
+    @apply list-reset flex justify-around mt-6 my-4;
 
     clear: both;
 
