--- a/resources/assets/styles/components/_header.scss
+++ b/resources/assets/styles/components/_header.scss
@@ -1,15 +1,19 @@
 .header-image {
   max-height: 60vh;
+
+  img {
+    @apply mt-0;
+  }
 }
 
 .banner {
-  & .custom-logo-link {
+  .custom-logo-link {
     @apply border-none;
 
-    & img {
+    img {
       @apply block w-auto;
 
-      max-height: 70px;
+      max-height: 3.5rem;
     }
   }
 }
@@ -17,7 +21,7 @@
 .banner .nav {
   @apply list-reset relative block w-full;
 
-  @media screen and (min-width: 768px) {
+  @screen md {
     @apply flex justify-end;
   }
 
@@ -40,13 +44,13 @@
   .sub-menu {
     @apply list-reset absolute bg-white z-10 shadow;
 
-    & .sub-menu {
+    .sub-menu {
       @apply ml-2;
     }
 
     top: 2.5rem;
 
-    & .current-menu-item {
+    .current-menu-item {
       @apply border-grey-darkest;
     }
 
@@ -61,7 +65,7 @@
 }
 
 .banner .nav a {
-  @apply w-full inline-block px-3 py-2 border-none border-transparent text-lg;
+  @apply w-full inline-block px-3 py-2 border-none border-transparent text-base;
 
   &:hover {
     @apply text-grey-darker;
