--- a/resources/assets/styles/common/_headings.scss
+++ b/resources/assets/styles/common/_headings.scss
@@ -4,7 +4,7 @@ h3,
 h4,
 h5,
 h6 {
-  @apply mb-2 leading-tight font-sans text-grey-darkest;
+  @apply mb-2 leading-tight text-grey-darkest;
 }
 
 h1 {
