--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -46,6 +46,7 @@
 @import "components/pages";
 @import "components/posts";
 @import "components/tinymce";
+@import "components/404";
 
 /**
  * This injects all of Tailwind's utility classes, generated based on your
