--- a/resources/assets/styles/components/_posts.scss
+++ b/resources/assets/styles/components/_posts.scss
@@ -161,8 +161,6 @@
 
     .nav-next,
     .nav-previous {
-      @apply w-1/2;
-
       a {
         @apply w-full h-full block border-2 border-transparent p-2;
 
@@ -186,15 +184,19 @@
     }
 
     .nav-previous {
-      @apply mr-8;
+      @apply w-1/2 mr-8;
 
       a {
         @apply -ml-2;
       }
     }
 
+    .nav-previous + .nav-next {
+      @apply w-1/2;
+    }
+
     .nav-next {
-      @apply ml-8;
+      @apply ml-8 w-1/2 ml-auto;
 
       a {
         @apply -mr-2;
@@ -213,12 +215,15 @@
     @apply my-4 flex justify-between;
   }
 
-  .nav-previous,
-  .nav-next {
+  .nav-previous {
+    @apply w-1/2;
+  }
+
+  .nav-previous + .nav-next {
     @apply w-1/2;
   }
 
   .nav-next {
-    @apply text-right;
+    @apply text-right w-full;
   }
 }
