--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -47,6 +47,7 @@
 @import "components/posts";
 @import "components/tinymce";
 @import "components/404";
+@import "components/search";
 
 /**
  * This injects all of Tailwind's utility classes, generated based on your
