feat(project): update screenshot, description, readme

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name:         First
-Theme URI:          https://roots.io/sage/
+Theme URI:          https://github.com/azdanov/wordpress-first
 Description:        My first WordPress theme made with Sage.
 Version:            1.0.0
 Author:             Anton Zdanov
